EditText with TextInputLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Zahra">
         <activity
+            android:name=".EditTextsActivity"
+            android:exported="false" />
+        <activity
             android:name=".GridLayoutActivity"
             android:exported="false" />
         <activity
